# the-legend-of-lulu

./: .gitignore  CMakeLists.txt  README.md  default.nix
assets/characters/link/: link.json
assets/characters/zelda/: dialogue.json
assets/characters/zol/: zol.json
assets/dungeon/configs/: hall.json  room 1.json  zelda's room.json
assets/dungeon/rooms/: hall.json  room 1.json  room 2.json  zelda's room.json
assets/link/: link.json
assets/rooms/: dungeon_hall.json
assets/zelda/: dialogue.json
assets/zol/: zol.json
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  the_legend_of_lulu
core/: main.cpp
core/include/: actor.hpp  animationHandler.hpp  arena.hpp  lulu.hpp  movable.hpp  roomLoader.hpp  types.hpp
core/include/actors/: bladeTrap.hpp  fighter.hpp  link.hpp  trapBlade.hpp
core/src/: actor.cpp  animationHandler.cpp  arena.cpp  movable.cpp  roomLoader.cpp  types.cpp
core/src/actors/: bladeTrap.cpp  fighter.cpp  link.cpp  trapBlade.cpp
game/: main.cpp
game/include/: dialogueManager.hpp  game.hpp  gameScene.hpp  gameplay.hpp  menu.hpp
game/src/: dialogueManager.cpp  game.cpp  gameScene.cpp  gameplay.cpp  menu.cpp
lulu/: lulu.hpp
lulu/include/: actor.hpp  animationHandler.hpp  arena.hpp  movable.hpp  types.hpp
lulu/include/characters/: character.hpp
lulu/include/fighters/: fighter.hpp  link.hpp  zol.hpp
lulu/include/utility actors/: door.hpp  npc.hpp
lulu/src/: actor.cpp  animationHandler.cpp  arena.cpp  movable.cpp
lulu/src/fighters/: fighter.cpp  link.cpp  zol.cpp
lulu/src/utility actors/: npc.cpp
